<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtPartidaTempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorPrimaryDark"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPartidaTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="4dp"
            android:paddingHorizontal="5dp"
            android:text="TextView"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="93dp" />

        <TextView
            android:id="@+id/txtPartidaTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:padding="4dp"
            android:paddingHorizontal="5dp"
            android:text="TextView"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="93dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPartidaGolTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addPonto"
            android:text="@string/partida_gol"
            android:textAllCaps="false"
            android:textSize="@dimen/texto_caixa"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="129dp" />

        <TextView
            android:id="@+id/txtPartidaGolTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingHorizontal="5dp"
            android:text="@string/partida_zero"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/partida_placar"
            android:textSize="@dimen/texto_add"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:id="@+id/txtPartidaGolTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingHorizontal="5dp"
            android:text="@string/partida_zero"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/partida_placar"
            android:textSize="@dimen/texto_add"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="200dp"
            tools:layout_editor_absoluteY="8dp" />

        <Button
            android:id="@+id/btnPartidaGolTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addPonto"
            android:text="@string/partida_gol"
            android:textAllCaps="false"
            android:textSize="@dimen/texto_caixa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPartidaGolTime2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPartidaFaltaTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addPonto"
            android:text="@string/partida_faltas"
            android:textAllCaps="false"
            android:textSize="@dimen/texto_caixa" />

        <TextView
            android:id="@+id/txtPartidaFaltaTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/partida_zero"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/partida_placar"
            android:textSize="@dimen/texto_add"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPartidaFaltaTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/partida_zero"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/partida_placar"
            android:textSize="@dimen/texto_add"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPartidaFaltaTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addPonto"
            android:text="@string/partida_faltas"
            android:textAllCaps="false"
            android:textSize="@dimen/texto_caixa" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPartidaEscanteioTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addPonto"
            android:text="@string/partida_escanteio"
            android:textAllCaps="false"
            android:textSize="@dimen/texto_caixa" />

        <TextView
            android:id="@+id/txtPartidaEscanteioTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/partida_zero"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/partida_placar"
            android:textSize="@dimen/texto_add"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPartidaEscanteioTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/partida_zero"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/partida_placar"
            android:textSize="@dimen/texto_add"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPartidaEscanteioTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addPonto"
            android:text="@string/partida_escanteio"
            android:textAllCaps="false"
            android:textSize="@dimen/texto_caixa" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPartidaAmareloTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addPonto"
            android:text="@string/partida_amarelo"
            android:textAllCaps="false"
            android:textSize="@dimen/texto_caixa" />

        <TextView
            android:id="@+id/txtPartidaAmareloTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/partida_zero"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/partida_placar"
            android:textSize="@dimen/texto_add"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPartidaAmareloTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/partida_zero"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/partida_placar"
            android:textSize="@dimen/texto_add"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPartidaAmareloTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addPonto"
            android:text="@string/partida_amarelo"
            android:textAllCaps="false"
            android:textSize="@dimen/texto_caixa" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:textAlignment="textStart">

        <Button
            android:id="@+id/btnPartidaVermelhoTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addPonto"
            android:text="@string/partida_vermelho"
            android:textAllCaps="false"
            android:textSize="@dimen/texto_caixa" />

        <TextView
            android:id="@+id/txtPartidaVermelhoTime1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/partida_zero"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/partida_placar"
            android:textSize="@dimen/texto_add"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPartidaVermelhoTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/partida_zero"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/partida_placar"
            android:textSize="@dimen/texto_add"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPartidaVermelhoTime2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addPonto"
            android:text="@string/partida_vermelho"
            android:textAllCaps="false"
            android:textSize="@dimen/texto_caixa" />
    </LinearLayout>

    <Button
        android:id="@+id/btnResultadoFinalPartida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="finalizaPartida"
        android:padding="8dp"
        android:text="Finalizar Partida"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPartidaGolTime1" />

    <Button
        android:id="@+id/btnPartidaNova"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:onClick="terminarPartida"
        android:text="Nova Partida"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</LinearLayout>
